Remove Required skills scheduling feature
